# Hydra

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HYDRA-latest.md  LICENSE.md  README.md  ROADMAP.md  Working-with-Section.md  gp.md  test.msh2
docs/: CodeAnalysis.md  HYDRA-latest.md  all.html  developer_guide.md  fixing_fvm_solver.md  gp.md  gp2.md  gp3.md  gp4.md  hydra_development_guide.md  hydra_improvment_guide.md  hydra_integration_guide.md  hydra_quick_devguide.md  hydra_userguides.md  hydra_users_guide.md  index.html  notes.md  short-term_roadmap.md  sidebar-items.js  solver_enhancements.md
docs/boundary/: index.html  sidebar-items.js
docs/domain/: index.html  sidebar-items.js
docs/geometry/: enum.CellShape.html  enum.FaceShape.html  index.html  sidebar-items.js  struct.Geometry.html
docs/solver/: index.html  sidebar-items.js
inputs/: circular_lake.msh2  coastal_island.msh2  elliptical_lagoon.msh2  meandering_river.msh2  polygon_estuary.msh2  rectangle.msh2  rectangle_quad.msh2  rectangular_channel.msh2  rectangular_channel_quad.msh2  test.msh2  triangular_basin.msh2
outputs/: extruded_mesh.msh
src/: lib.rs  main.rs
src/boundary/: about_boundary.md  bc_handler.rs  cauchy.rs  dirichlet.rs  far_field.rs  flow.rs  free_surface.rs  improving_boundary.md  improving_boundary_testing.md  inflow.rs  injection.rs  inlet_outlet.rs  mixed.rs  mod.rs  neumann.rs  no_slip.rs  open.rs  outflow.rs  periodic.rs  robin.rs  solid_wall.rs  symmetry.rs  types.rs
src/domain/: about_domain.md  about_hierarchical_mesh_representation.md  dm_field.rs  dm_mesh.rs  dm_point.rs  (+21 more)
(+340 files in other folders)
