[package]
name = "hydra"
version = "0.5.0"
edition = "2021"

[lib]
name = "hydra"
path = "src/lib.rs"

[dependencies]
rustc-hash = "2.0.0"
faer = { version = "0.19", features = ["rayon"] }
rayon = "1.5"
crossbeam = "0.8.4"
dashmap = "5.1"
approx = "0.5"
lazy_static = "1.5"

[dev-dependencies]
criterion = "0.4"
rand = "0.8"